<?xml version="1.0" encoding="utf-8"?>


<!--            LOGIN PAGE            -->

<resources>
    <string name="login_page_sign_up">Registrati</string>
    <string name="login_page_test_mail_address">test@mail.com</string>
    <string name="login_page_email">Email</string>
    <string name="login_page_login">login</string>
    <string name="login_page_remember_me">Ricordami</string>
    <string name="login_page_resetPassword"><u>Password dimenticata?</u></string>

    <string name="login_page_email_demo">noto42@outlook.com</string>
    <string name="login_page_password_demo">aaaaaaa</string>
    <string name="login_page_googlelogin">ACCEDI</string>
    <string name="login_page_access_with_google">Altrimenti, accedi con Google</string>
    <!-- firebase -->
    <string name="login_page_firebase_login_page">Login page</string>
    <string name="login_page_firebase_standard_login_method">email + password</string>



    <!--       TOAST MESSAGES        -->
    <string name="login_page_deleted_credentials">Credenziali eliminate</string>

    <!-- auth server messages -->


    <!--      TEXT FIELDS        -->
    <string name="login_page_no_email_error">inserire mail!</string>
    <string name="login_page_no_password_error">inserire password!!</string>

    <!--      GOOGLE LOGIN     -->
    <string name="googleLogin_page_title_access">bentornato! Sembra che tu sia già in possesso di un account: clicca su continua per accedere a tutti i contenuti.</string>
    <string name="googleLogin_page_title_registration">, benvenuto su Cinemates20.\nSembra che tu non abbia ancora un account: completa i campi e registrati per poter accedere a tutti i contenuti.</string>
    <string name="googleLogin_page_title_back">Ci dispiace, ma le credenziali con cui stai cercando di accedere corrispondono già ad un account.\nSe non ricordi la tua password, torna indietro ed avvia la procedura di recupero password.</string>


    <string name="googleLogin_page_button_login">Continua</string>
    <string name="googleLogin_page_button_Registration">Registrati</string>
    <string name="googleLogin_page_button_back">Torna indietro</string>


</resources>